--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!-- Residence Page -->
     <div class="residence page" id="3">
         <div class="residence_bgvid">
-            <video id="media-video" autoplay loop muted>
+            <video id="media-video" autoplay loop>
                 <source src="./3_ResidencePage/Marina_360.mp4" type="video/mp4">
             </video> </div>
         <iframe src="./3_ResidencePage/residence_vista/index.htm" frameborder="0"></iframe>
