--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
     <!-- Residence Page -->
     <div class="residence page" id="3">
         <div class="residence_bgvid">
-            <video id="media-video" autoplay loop>
-                <source src="./3_ResidencePage/Marina_360.mp4" type="video/mp4">
-            </video> </div>
+            <video id="media-video" autoplay muted>
+                <source src="./3_ResidencePage/Marina_360.mp4" type="video/mp4"></source>
+            </video> 
+        </div>
         <iframe src="./3_ResidencePage/residence_vista/index.htm" frameborder="0"></iframe>
         <!-- <div class="player-container">
             <div class="play-control">
