video change + minor changes

--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
     <!-- Residence Page -->
     <div class="residence page" id="3">
         <div class="residence_bgvid">
-            <video id="media-video" autoplay muted>
-                <source src="./3_ResidencePage/Marina_360.mp4" type="video/mp4"></source>
+            <video id="media-video" autoplay loop muted>
+                <source src="./3_ResidencePage/MB Building (1).mp4" type="video/mp4"></source>
             </video> 
         </div>
+        <div class="residence_bgvid">
         <iframe src="./3_ResidencePage/residence_vista/index.htm" frameborder="0"></iframe>
         <!-- <div class="player-container">
             <div class="play-control">
@@ -142,8 +143,8 @@
                 <div class="progress-background"></div>
                 <div class="progress-over"></div>
                 <div class="progress-hidden"></div>
-            </div>
-        </div> -->
+            </div> -->
+        </div>
         <!-- <span id="residence_close" class="close">ₓ</span> -->
     </div>
 
