--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
        
     <div class="logoWatermark">
-        <img src="./icons/MFCL Logo only watermark.png" alt="">
+        <img src="./icons/MFCL Watermark with name.png" alt="">
     </div>
     
     <!-- Home Page -->
