--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         <span class="ver bottom" id="right2"></span>
     </div>
        
-    <div class="logoWatermark">
+    <!-- <div class="logoWatermark">
         <img src="./icons/MFCL Watermark with name.png" alt="">
-    </div>
+    </div> -->
     
     <!-- Home Page -->
     <div class="home page active" id="1">
