rotate device warning

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     </audio>        
 
     <!-- Loading Page -->
+    <div class="warning">
+        <div class="phone">
+        </div>
+        <div class="message">
+          Please rotate your device!
+        </div>
+    </div>
     <!-- <div class="loading page">
         <video class="loading_video" autoplay loop muted plays-inline src="./Mothership Logo Animation.mp4" ></video>
     </div> -->
