--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     </audio>        
 
     <!-- Loading Page -->
+    <div class="fullscreen">
+        <div class="popupbox">
+            <div class="upperbox">Enter Fullscreen Mode for optimal Experience!</div>
+            <div class="lowerbox">
+                <button class="fullscrbtn" id="fullscr-button" href="#" style="background-color: blue; color:white;">Enter</button>
+                <button class="cancelbtn" >Cancel</button>
+            </div>
+        </div>
+    </div>
     <div class="warning">
         <div class="phone">
         </div>
